<package>
  <name>bwi</name>
  <version>0.0.1</version>
  <description>
    Top-level Building-Wide Intelligence packages for the Gates Dell
    Complex at the University of Texas at Austin.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>segbot_bringup</run_depend>
  <run_depend>segbot_gazebo</run_depend>
  <run_depend>segbot_navigation</run_depend>
  <run_depend>segbot_gazebo</run_depend>
  <run_depend>utexas_gdc</run_depend>

  <!-- testing dependencies -->
  <build_depend>roslaunch</build_depend>

</package>
