<package>
  <name>bwi</name>
  <version>0.2.0</version>
  <description>
    Top-level ROS repository for the Building-Wide Intelligence (BWI)
    project of the University of Texas at Austin.  This metapackage
    depends on all the packages and metapackages in this repository.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi</url>
  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Contents of this repository. -->
  <run_depend>bwi_desktop</run_depend>
  <run_depend>bwi_desktop_full</run_depend>
  <run_depend>bwi_launch</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
