<package>
  <name>bwi_desktop</name>
  <version>0.2.1</version>
  <description> 
    ROS desktop metapackage for the Building-Wide Intelligence (BWI)
    project of the University of Texas at Austin.  It depends on all
    released BWI packages.  These packages include GUI components.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_desktop</url>
  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- All released metapackages and packages for the BWI project in
       top-down order.  No package may depend on anything higher in
       the list. -->
  <run_depend>bwi_launch</run_depend>
  <run_depend>bwi_planning</run_depend>
  <run_depend>clasp</run_depend>
  <run_depend>segbot_simulator</run_depend>
  <run_depend>segbot_apps</run_depend>
  <run_depend>segbot</run_depend>
  <run_depend>bwi_common</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
