<package format="2">
  <name>bwi_desktop_full</name>
  <version>0.3.3</version>
  <description>
    ROS desktop full metapackage for the Building-Wide Intelligence
    (BWI) project of the University of Texas at Austin.  It depends on
    all released BWI packages and some other useful ROS packages.
    These packages include GUI components.
  </description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bwi_desktop_full</url>
  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Top-level metapackage for all released BWI packages. -->
  <exec_depend>bwi_desktop</exec_depend>

  <!-- Extras -->
  <exec_depend>python-bloom</exec_depend>
  <exec_depend>python-catkin-tools</exec_depend>
  <exec_depend>python-rosinstall</exec_depend>
  <exec_depend>python-wstool</exec_depend>
  <exec_depend>rosemacs</exec_depend> <!-- name changed for Indigo (#18) -->

  <export>
    <architecture_independent/>
    <metapackage/>
  </export>

</package>
