<package format="2">
  <name>bwi_launch</name>
  <version>0.3.0</version>
  <description>
    Top-level ROS launch scripts for the Building-Wide Intelligence
    (BWI) project of the University of Texas at Austin.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bwi_kr_execution</depend>
  <depend>multi_level_map_server</depend>
  <depend>multi_level_map_utils</depend>
  <depend>segbot_bringup</depend>
  <depend>segbot_gazebo</depend>
  <depend>segbot_gui</depend>
  <depend>segbot_logical_translator</depend>
  <depend>segbot_navigation</depend>
  <depend>segbot_simulation_apps</depend>
  <depend>utexas_gdc</depend>

  <test_depend>roslaunch</test_depend>

</package>
