<package format="2">
  <name>bwi_launch</name>
  <version>0.3.3</version>
  <description>
    Top-level ROS launch scripts for the Building-Wide Intelligence
    (BWI) project of the University of Texas at Austin.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/utexas-bwi/bwi</url>
  <url type="bugtracker">https://github.com/utexas-bwi/bwi/issues</url>

  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Jack O'Quin</author>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bwi_kr_execution</exec_depend>
  <exec_depend>bwi_logging</exec_depend>
  <exec_depend>bwi_msgs</exec_depend>
  <exec_depend>bwi_tools</exec_depend>
  <exec_depend>bwi_virtour</exec_depend>
  <exec_depend>multi_level_map_server</exec_depend>
  <exec_depend>multi_level_map_utils</exec_depend>
  <exec_depend>segbot_bringup</exec_depend>
  <exec_depend>segbot_gazebo</exec_depend>
  <exec_depend>segbot_gui</exec_depend>
  <exec_depend>segbot_logical_translator</exec_depend>
  <exec_depend>segbot_navigation</exec_depend>
  <exec_depend>segbot_simulation_apps</exec_depend>
  <exec_depend>utexas_gdc</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
